# AlphaEvolveWriting

./: .gitignore  LICENSE  README.md  config.json  evolve.py  generate_initial_batch.py  generate_next_batch.py  prompt.txt  pyproject.toml  requirements.txt  reset_preferences.py  run_elo_tournament.py  run_evolution_pipeline.py  show_config.py
.claude/: settings.local.json
lib/: elo_rank.py  generate_response.py  generate_response_general.py  judge_response.py
output/: batch2_stories.json  batch3_stories.json  elo_rankings.json  initial_stories.json  live_percentages.json  match_history.json  preference_data.json  prompt.txt  rubric.txt
output/backups/: 20250604_121451_preference_data.json
output/deperecated_stories/book_store/: batch2_stories.json  batch5_stories.json  elo_rankings.json
output/deperecated_stories/book_store_2.0/: batch2_stories.json
output/deperecated_stories/book_store_gpt-4o/: initial_stories.json
output/deperecated_stories/space_gpt-4o/: batch2_stories.json  batch4_stories.json
output/examples/book_store/: initial_stories.json
output/examples/book_store_2.0/: batch3_stories.json  match_history.json
output/examples/book_store_gpt-4o/: batch2_stories.json  elo_rankings.json
output/examples/elevator_llama-scout/: batch2_stories.json  batch3_stories.json  batch4_stories.json  batch5_stories.json  batch6_stories.json  elo_rankings.json  initial_stories.json  match_history.json  preference_data.json
output/examples/llama3.2B/: batch2_stories.json  batch3_stories.json  batch4_stories.json  elo_rankings.json  initial_stories.json  match_history.json
output/examples/metafictional-ai-llama_scout/: batch2_stories.json  batch3_stories.json  batch4_stories.json  batch5_stories.json  elo_rankings.json  initial_stories.json  live_percentages.json  preference_data.json
output/examples/numer_arm_llama-scout/: batch2_stories.json  batch3_stories.json  batch4_stories.json  batch5_stories.json  elo_rankings.json  initial_stories.json  match_history.json
output/examples/space_gpt-4o/: batch3_stories.json  batch5_stories.json  elo_rankings.json
output/examples/space_llama-Scout/: batch2_stories.json  batch3_stories.json  batch4_stories.json  batch5_stories.json  elo_rankings.json  match_history.json
output/examples/story1/: batch3_stories.json  batch6_stories.json
output/examples/story2/: batch3_stories.json  batch4_stories.json  batch5_stories.json  batch6_stories.json  elo_rankings.json  match_history.json
output/examples/story3/: batch2_stories.json  batch4_stories.json  batch5_stories.json  elo_rankings.json  initial_stories.json  match_history.json
src/: __init__.py
src/core/: __init__.py  pipeline.py
src/generators/: __init__.py  generate_response.py  generate_response_general.py  judge_response.py  story_generator.py
src/rankers/: __init__.py  elo_rank.py  glicko_rank.py  tournament_runner.py
src/utils/: __init__.py  database.py
utils/: inference.py
web_interface/: README.md  app.py
web_interface/templates/: base.html  compare.html  index.html  judge_test.html  stats.html
(+42 files in other folders)
